# My_HPC

./: LICENSE  README.md
lab1/: README.md
lab1/code/: plot_nb_vs_gflops.py
lab1/report/: report.md
lab2/: README.md
lab2/code/numpy_example/bilinear_interp/: vectorized.py
lab2/code/vector/: CMakeLists.txt  main.cpp
lab2/code/vector/include/: tile.h
lab2/code/vector/src/: buffer.cpp  reshape.cpp
lab2/report/: report.md
lab4/: README.md
lab4/code/: CMakeLists.txt  run.sh
lab4/code/include/: judger.h
lab4/code/src/: judger.cpp  main.cpp
lab4/code/src/bicgstab/: solver.c
lab4/report/: 基于MPI+OpenMP混合并行的BiCGSTAB算法实现与调优.md
基于AVX-512的整数量化矩阵乘法优化实验/: README.md
基于AVX-512的整数量化矩阵乘法优化实验/code/vector/: config.yaml  main.cpp
基于AVX-512的整数量化矩阵乘法优化实验/code/vector/include/: buffer.h  reshape.h
基于AVX-512的整数量化矩阵乘法优化实验/report/: report.md
基于MPI+OpenMP混合并行的BiCGSTAB算法实现与调优/: .gitignore  README.md
基于MPI+OpenMP混合并行的BiCGSTAB算法实现与调优/code/: compile.sh  run_benchmark.sh  run_vtune.sh
基于MPI+OpenMP混合并行的BiCGSTAB算法实现与调优/report/: 基于MPI+OpenMP混合并行的BiCGSTAB算法实现与调优.docx  基于MPI+OpenMP混合并行的BiCGSTAB算法实现与调优.md
迷你集群搭建及HPL性能调优/: README.md
迷你集群搭建及HPL性能调优/code/: hpl_n_vs_gflops_plot.py  plot_n_and_nb_vs_gflops.py
迷你集群搭建及HPL性能调优/report/: report.md
迷你集群搭建及HPL性能调优/result/: hpl_output.txt
